add ./ and "" to img

--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ body {
 
 #es-garnier.es-garnier .es-kv__accent2::before,
 #es-garnier.es-garnier .es-kv__accent2::after {
-  content: url(./img/square\ bracket\ open.png);
+  content: url("./img/square\ bracket\ open.png");
   color: #e75e1c;
   position: absolute;
   top: 35%;
@@ -135,7 +135,7 @@ body {
 }
 
 #es-garnier.es-garnier .es-kv__accent2::after {
-  content: url(./img/square\ bracket\ close.png);
+  content: url("./img/square\ bracket\ close.png");
   right: -200px;
 }
 
@@ -422,14 +422,14 @@ body {
 }
 /* [] jako ::before and ::after */
 #es-garnier.es-garnier .es-benefits__label::before {
-  content: url(./img/border-1.png);
+  content: url("./img/border-1.png");
   position: absolute;
   top: 0;
   left: 0;
 }
 
 #es-garnier.es-garnier .es-benefits__label::after {
-  content: url(./img/border-2.png);
+  content: url("./img/border-2.png");
   position: absolute;
   top: 0;
   right: 0;
@@ -689,7 +689,7 @@ body {
 }
 
 #es-garnier.es-garnier .es-results__bg-right::before {
-  content: url(./img/results-packshot.png);
+  content: url("./img/results-packshot.png");
   position: absolute;
   z-index: 999;
   right: -50%;
@@ -703,7 +703,7 @@ body {
 }
 
 #es-garnier.es-garnier .es-results__bg-right {
-  background-image: url(./img/results-bg.png);
+  background-image: url("./img/results-bg.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
